update:解析markdown-it add:添加loge测试右下角

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -2,7 +2,9 @@
 @light-gray: #dedede;
 
 body {
-  background-color: @light-gray !important;
+  background-color: #ffffff !important;
+  // 浏览器禁用滚动条
+  overflow : hidden;
 }
 
 /*
